--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LUISPEDRO189;Database=Bulky;Trusted_Connection=True;"
+        "DefaultConnection": "Server=LUISPEDRO189;Database=Bulky;Trusted_Connection=True;Integrated Security=True;"
     }
 }
